--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,14 +75,9 @@ dependencies {
     implementation 'com.tencent.tbs:tbssdk:44176'
     implementation 'com.tencent:mmkv:1.2.13'//替代sp
 
-//    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     implementation 'io.github.jeremyliao:live-event-bus-x:1.8.0'
-//    implementation 'com.tencent:mmkv:1.0.19'
 
-//    implementation 'com.scwang.smart:refresh-layout-kernel:2.0.3'
-//    implementation  'com.scwang.smart:refresh-header-two-level:2.0.3'//二级刷新头
-//    implementation 'com.scwang.smart:refresh-footer-ball:2.0.3'
 
     implementation('androidx.core:core-splashscreen:1.0.0-alpha02')
     implementation('io.github.razerdp:BasePopup:3.1.8')//一个popupwin
@@ -92,5 +87,7 @@ dependencies {
     implementation('io.github.lucksiege:pictureselector:v3.0.9')//图片选择库
     implementation('com.github.li-xiaojun:XPopupExt:0.0.8')//三级联动
     implementation('com.github.li-xiaojun:XPopup:2.6.3')//三级联动
+    implementation('com.github.liangjingkanji:BRV:1.3.71')//一个recycleview库
+    implementation('com.google.android.flexbox:flexbox:3.0.0')
 
 }
