--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
     }
 
     buildTypes {
@@ -39,6 +43,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+
 }
 
 dependencies {
@@ -90,5 +95,9 @@ dependencies {
     implementation('com.github.li-xiaojun:XPopup:2.6.3')//三级联动
     implementation('com.github.liangjingkanji:BRV:1.3.71')//一个recycleview库
     implementation('com.google.android.flexbox:flexbox:3.0.0')
+
+    implementation ('com.iqiyi.xcrash:xcrash-android-lib:3.0.0')//爱奇艺crash异常捕获
+
+    api('com.github.devin1014.DLNA-Cast:dlna-dmc:V1.0.0')
 
 }
