--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,13 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://jitpack.io'
+        }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven {
+            url 'https://4thline.org/m2'
+        }
     }
 }
 rootProject.name = "WanAndroid"
