--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.wanandroid"
+        applicationId "com.example.owentime"
         minSdk 23
         targetSdk 31
         versionCode 1
@@ -98,6 +98,6 @@ dependencies {
 
     implementation ('com.iqiyi.xcrash:xcrash-android-lib:3.0.0')//爱奇艺crash异常捕获
 
-    api('com.github.devin1014.DLNA-Cast:dlna-dmc:V1.0.0')
+//    api('com.github.devin1014.DLNA-Cast:dlna-dmc:V1.0.0')
 
 }
