--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'io.coil-kt:coil:1.4.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.3.3'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.3.3'
+//    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.4.6'
-    implementation 'androidx.paging:paging-runtime:3.1.1'
+//    implementation 'androidx.paging:paging-runtime:3.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.github.getActivity:TitleBar:9.2'
