--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlinx-serialization'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -66,6 +67,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'io.coil-kt:coil:1.4.0'
 //    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
 //    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.3.3'
@@ -81,7 +83,7 @@ dependencies {
     implementation 'com.tencent.tbs:tbssdk:44176'
     implementation 'com.tencent:mmkv:1.2.13'//替代sp
 
-    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+//    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     implementation 'io.github.jeremyliao:live-event-bus-x:1.8.0'
 
 
@@ -96,7 +98,13 @@ dependencies {
     implementation('com.github.liangjingkanji:BRV:1.3.71')//一个recycleview库
     implementation('com.google.android.flexbox:flexbox:3.0.0')
 
-    implementation ('com.iqiyi.xcrash:xcrash-android-lib:3.0.0')//爱奇艺crash异常捕获
+//    implementation ('com.iqiyi.xcrash:xcrash-android-lib:3.0.0')//爱奇艺crash异常捕获
+
+    implementation('com.squareup.moshi:moshi-kotlin:1.13.0')
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.13.0")
+
+
+
 
 //    api('com.github.devin1014.DLNA-Cast:dlna-dmc:V1.0.0')
 
