--- a/settings.gradle
+++ b/settings.gradle
@@ -8,16 +8,21 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        google()
-        mavenCentral()
+//        google()
+//        mavenCentral()
         maven {
             url 'https://jitpack.io'
         }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven {
-            url 'https://4thline.org/m2'
-        }
+        maven { url 'https://repo1.maven.org/maven2/'}
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/google'}
+        maven { url 'https://maven.aliyun.com/nexus/content/repositories/gradle-plugin'}
+
+//        maven {
+//            url 'https://4thline.org/m2'
+//        }
     }
 }
-rootProject.name = "WanAndroid"
+rootProject.name = "OwenTime"
 include ':app'
