--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,33 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlinx-serialization'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
 }
 
 android {
+
+    signingConfigs {
+
+        release {
+            storeFile file('owntime.jks')
+            storePassword '123456'
+            keyAlias 'key0'
+            keyPassword '123456'
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.owentime"
+//        applicationId "com.example.owentime"
+        applicationId "com.example.time_project"
         minSdk 23
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders=[qqappid:"100424468"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -27,10 +40,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -67,13 +82,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
     implementation 'io.coil-kt:coil:1.4.0'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.3.3'
-//    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.4.6'
-//    implementation 'androidx.paging:paging-runtime:3.1.1'
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation 'com.github.getActivity:TitleBar:9.2'
@@ -82,8 +94,6 @@ dependencies {
     implementation 'com.github.li-xiaojun:FlycoTabLayout:2.0.6'
     implementation 'com.tencent.tbs:tbssdk:44176'
     implementation 'com.tencent:mmkv:1.2.13'//替代sp
-
-//    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     implementation 'io.github.jeremyliao:live-event-bus-x:1.8.0'
 
 
@@ -98,16 +108,17 @@ dependencies {
     implementation('com.github.liangjingkanji:BRV:1.3.71')//一个recycleview库
     implementation('com.google.android.flexbox:flexbox:3.0.0')
 
-//    implementation ('com.iqiyi.xcrash:xcrash-android-lib:3.0.0')//爱奇艺crash异常捕获
-
-//    implementation('com.squareup.moshi:moshi-kotlin:1.13.0')
-//    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.13.0")
-
-
     implementation('com.github.getActivity:GsonFactory:6.0')
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.8.0'//微信
+    implementation ('com.umeng.umsdk:common:9.4.4')//必选
+    implementation ('com.umeng.umsdk:asms:1.4.1')//必选
+    implementation ('com.umeng.umsdk:share-core:7.1.7')//分享核心库，必选
+    implementation ('com.umeng.umsdk:share-board:7.1.7')//分享面板功能，可选
+
+    implementation 'com.umeng.umsdk:share-wx:7.1.7' //微信完整版
 //    api('com.github.devin1014.DLNA-Cast:dlna-dmc:V1.0.0')
 
 }
