--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.owentime">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WanAndroid"
-        android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:exported="true"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|fontScale"
+            android:exported="true"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="wxe5d9e7a062976e55" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.ForScreenActivity"
             android:exported="false" />
@@ -26,7 +46,8 @@
             android:exported="false" />
         <activity
             android:name=".ui.OrderDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".ui.OrderListActivity"
             android:exported="false" />
@@ -78,7 +99,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.LoginActivity"
             android:exported="false" />
@@ -87,7 +107,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="orientation|screenSize|keyboardHidden|fontScale"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
@@ -96,6 +116,38 @@
             android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
             android:label="dexopt"
             android:process=":dexopt" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.time_project.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
+
     </application>
+<!--    从Android 11开始，需要在AndroidManifest.xml清单文件中加入query权限申请，才能检测到手机上安装的三方应用包安装状态-->
+<!--    <queries>-->
+<!--        <package android:name="com.tencent.mm" />            // 指定微信包名-->
+<!--        <package android:name="com.tencent.mobileqq" />    //指定qq包名-->
+<!--        <package android:name="com.sina.weibo" />             //指定微博包名-->
+<!--        <package android:name="com.tencent.wework" />      //指定企业微信包名-->
+<!--        <package android:name="com.qzone" />                   //指定QQ空间包名-->
+<!--        <package android:name="com.alibaba.android.rimet" /> // 指定钉钉包名-->
+<!--        <package android:name="com.eg.android.AlipayGphone" /> // 指定支付宝包名-->
+<!--        <package android:name="com.instagram.android" />         // 指定instagram包名-->
+<!--    </queries>-->
+    <queries>
+        <package android:name="com.tencent.mm" />
+<!--        <package android:name="com.qzone" />-->
+        <package android:name="com.eg.android.AlipayGphone" />
+
+<!--        <package android:name="com.eg.android.AlipayGphoneRC" />-->
+
+        <!-- <package android:name="hk.alipay.wallet" /> -->
+    </queries>
+
 
 </manifest>
