--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
             android:exported="false" />
         <activity
             android:name="com.example.time_project.ui.AddressActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|fontScale"
             android:exported="false" />
         <activity
             android:name="com.example.time_project.ui.UpOrderActivity"
@@ -88,6 +89,7 @@
             android:exported="false" />
         <activity
             android:name="com.example.time_project.ui.PerfectActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|fontScale"
             android:exported="false" />
         <activity
             android:name="com.example.time_project.ui.SplashActivity"
@@ -101,6 +103,7 @@
         </activity>
         <activity
             android:name="com.example.time_project.ui.LoginActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden|fontScale"
             android:exported="false" />
         <activity
             android:name="com.example.time_project.web.WebActivity"
