--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,5 +129,6 @@ dependencies {
     implementation('com.github.ideastudios:IdealRecorder:2.0.4')//录音相关
     implementation ('com.github.microshow:RxFFmpeg:4.9.0-lite')//FF
     implementation('androidx.paging:paging-runtime:3.1.1')//使用paging3做分页
+    implementation('com.github.ydstar:loadingdialog:1.0.0')//loading
 
 }
