--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
-    implementation 'com.github.getActivity:TitleBar:9.2'
+    implementation 'com.github.getActivity:TitleBar:9.5'
     implementation 'com.github.getActivity:ShapeView:6.2'
 
     implementation 'com.github.li-xiaojun:FlycoTabLayout:2.0.6'
@@ -130,5 +130,7 @@ dependencies {
     implementation ('com.github.microshow:RxFFmpeg:4.9.0-lite')//FF
     implementation('androidx.paging:paging-runtime:3.1.1')//使用paging3做分页
     implementation('com.github.ydstar:loadingdialog:1.0.0')//loading
+
+//    implementation "com.mikepenz:fastadapter:5.6.0"
 
 }
