--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,8 @@ android {
             signingConfig signingConfigs.release
         }
         debug {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
@@ -130,7 +130,7 @@ dependencies {
 //    implementation ('com.github.zhaolewei:ZlwAudioRecorder:v1.08')//录音相关
     implementation('com.github.ideastudios:IdealRecorder:2.0.4')//录音相关
     implementation ('com.github.microshow:RxFFmpeg:4.9.0-lite')//FF
-    implementation('androidx.paging:paging-runtime:3.1.1')//使用paging3做分页
+//    implementation('androidx.paging:paging-runtime:3.1.1')//使用paging3做分页
     implementation('com.github.ydstar:loadingdialog:1.0.0')//loading
 
     implementation 'com.github.donkingliang:LabelsView:1.6.5'//标签控件
