--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.WanAndroid"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.FeedBackActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.CouponActivity"
             android:exported="false" />
         <activity
@@ -147,8 +150,7 @@
 
 
         <!-- <package android:name="hk.alipay.wallet" /> -->
-    </queries>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 从Android 11开始，需要在AndroidManifest.xml清单文件中加入query权限申请，才能检测到手机上安装的三方应用包安装状态 -->
+    </queries> <!-- 从Android 11开始，需要在AndroidManifest.xml清单文件中加入query权限申请，才能检测到手机上安装的三方应用包安装状态 -->
     <!-- <queries> -->
     <!-- <package android:name="com.tencent.mm" />            // 指定微信包名 -->
     <!-- <package android:name="com.tencent.mobileqq" />    //指定qq包名 -->
@@ -163,8 +165,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
