--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.WanAndroid"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.FeedBackActivity"
             android:exported="false" />
         <activity
@@ -139,18 +142,7 @@
             android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
             android:label="dexopt"
             android:process=":dexopt" />
-    </application>
-
-    <queries>
-        <package android:name="com.tencent.mm" />
-        <!-- <package android:name="com.qzone" /> -->
-        <package android:name="com.eg.android.AlipayGphone" />
-
-        <!-- <package android:name="com.eg.android.AlipayGphoneRC" /> -->
-
-
-        <!-- <package android:name="hk.alipay.wallet" /> -->
-    </queries> <!-- 从Android 11开始，需要在AndroidManifest.xml清单文件中加入query权限申请，才能检测到手机上安装的三方应用包安装状态 -->
+    </application> <!-- 从Android 11开始，需要在AndroidManifest.xml清单文件中加入query权限申请，才能检测到手机上安装的三方应用包安装状态 -->
     <!-- <queries> -->
     <!-- <package android:name="com.tencent.mm" />            // 指定微信包名 -->
     <!-- <package android:name="com.tencent.mobileqq" />    //指定qq包名 -->
@@ -161,13 +153,23 @@
     <!-- <package android:name="com.eg.android.AlipayGphone" /> // 指定支付宝包名 -->
     <!-- <package android:name="com.instagram.android" />         // 指定instagram包名 -->
     <!-- </queries> -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <queries>
+        <package android:name="com.tencent.mm" />
+        <!-- <package android:name="com.qzone" /> -->
+        <package android:name="com.eg.android.AlipayGphone" />
+
+        <!-- <package android:name="com.eg.android.AlipayGphoneRC" /> -->
+
+
+        <!-- <package android:name="hk.alipay.wallet" /> -->
+    </queries>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
